# openface-3.0-fixes

./: .gitignore  README.md  cli.py  demo.py  face_detection.py  landmark_detection.py  pyproject.toml
STAR/conf/: alignment.py
